# proto-gcloud

./: .commitlint.yaml  .dprint.json  .editorconfig  .gitignore  .prototools  Cargo.toml  LICENSE  README.md  clippy.toml  lefthook.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/rules/: branch-all-users-rules.json  branch-exclude-core-contributors-rules.json  tag-allow-only-user-rules.json
.github/scripts/release/: determine-version.ts
.github/workflows/: _reusable-cargo-build.yaml  _reusable-cargo-test.yaml  _reusable-e2e.yaml  _reusable-release.yaml  auto-release.yaml  ci.yml  promote-release.yaml  release.yml  rerun.yml
scripts/: tag.sh
src/: config.rs  lib.rs  proto.rs  version.rs
tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tests/snapshots/: shims_test__gcloud_tool__creates_shims.snap
