[package]
name = "gcloud_plugin"
version = "0.1.3"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
extism-pdk = { version = "1.4.1", optional = true }
proto_pdk = { version = "0.30.1", optional = true }
proto_pdk_api = { version = "0.29.1", optional = true }
schematic = { version = "0.18.11", default-features = false, features = ["schema"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
proto_pdk_test_utils = "0.39.1"
starbase_sandbox = "0.9.4"
tokio = { version = "1.46.1", features = ["full"] }

[features]
default = ["wasm"]
wasm = ["dep:extism-pdk", "dep:proto_pdk", "dep:proto_pdk_api", "dep:schematic"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
