[package]
name = "proto-gcloud"
version = "1.0.3-alpha.20260622.23"
edition = "2024"
description = "Proto WASM plugin for Google Cloud SDK."
authors = ["ageha734"]
license = "MIT"
repository = "https://github.com/ageha734/proto-gcloud"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
wasm = ["dep:extism-pdk", "dep:proto_pdk", "dep:schematic"]

[dependencies]
extism-pdk = { version = "1.4.1", optional = true }
proto_pdk = { version = "0.32.8", optional = true }
schematic = { version = "0.18.11", default-features = false, features = ["schema"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
proto_pdk_test_utils = "0.45.1"
starbase_sandbox = "0.9.4"
tokio = { version = "1.46.1", features = ["full"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
